# DLC

./: Makefile  README.md  designDoc.txt  ece508-final  input_file.py  input_file_hardcoded_uint8.py  input_random.py  rai_build.yml  rai_build_random.yml
Profiler_results/Apr30_code/: analysis.nvprof  ece508-final  timeline.nvprof
Profiler_results/May12_1MB/: 1MB_run  analysis_D1.2.nvprof  analysis_D1.nvprof  analysis_D2.nvprof  analysis_D3.nvprof  analysis_D4.nvprof  timeline_D1.2.nvprof  timeline_D1.nvprof  timeline_D2.nvprof  timeline_D3.nvprof  timeline_D4.nvprof
Profiler_results/May12_80MB/: analysis_D1.2.nvprof  analysis_D1.nvprof  analysis_D2.nvprof  analysis_D3.nvprof  analysis_D4.nvprof  timeline_D1.2.nvprof  timeline_D1.nvprof  timeline_D2.nvprof  timeline_D3.nvprof  timeline_D4.nvprof
Profiler_results/May12_8MB/: 8MB_run  analysis_D1.2.nvprof  analysis_D1.nvprof  analysis_D2.nvprof  analysis_D3.nvprof  (+7 more)
data/: input512.raw  input_1024.raw  input_131072_random.raw  input_16384.raw  input_65536.raw  out_floats.raw
examples/: Makefile  matrixCompressionExample.cpp
schemes/: fixedCompress.cpp  fixedPointCompress.cpp  fixedPointCompress.h  longCompress.c  matrixCompress.cpp  matrixCompress.h
schemes/fixedPoint/: CMakeLists.txt  Dockerfile  FixedPointConfig.h.in  bak.Makefiel  fixedPointCompressionExample.cpp  main.cu  rai_build.yml
schemes/fixedPoint/lib/: CMakeLists.txt  fixedPointCompress.cpp
src/: compress_optimized.cpp  compress_optimized.cu  compress_reduced.cu  main.cu  main_D4.cu  main_Lai.cu  main_Namit.cu  main_beforeApr29.cu  main_temp.cu
(+33 files in other folders)
